# vathos

./: CMakeLists.txt  README.md  dual1_class.h  dual2_3d_class.h  dual2_class.h  dualbase_class.h  main.cpp  reverseVar.h  reverse_ad.h  reverse_mode.cpp
tests/: test_dual_classes.cpp
